# AllergyDatabase

./: .gitignore  ANDROID_SDK_LICENSE_FIX.md  HANDOUT.md  README.md  README_ANDROID.md  README_CI.md  TASK1_STEPS.md  allergies.db  allergies_export.csv  allergy_database.annotated.kv  allergy_database.kv  allergy_database.py  allergy_database_kv.py  allergydatabase.kv  buildozer.spec  database_manager.py  food_allergies_export.csv  food_allergy_database.py  foodallergyshield.spec  pyproject.toml  run_dev.bat  run_dev.py  run_dev.sh  sample_data.csv  sample_data.py  test_import.db
.github/workflows/: android-debug.yml  build-apk.yml  buildozer.spec  release-build.yml
archive/: database_manager.py  food_allergy_shield.py
docs/: DEVELOPMENT.md  LAB.md  UI_APPROACHES_COMPARISON.md
scripts/: README.md  build_complete.bat  build_complete.ps1  post_build.bat  post_build.ps1  post_build.sh
src/foodallergyshield/: __init__.py  __main__.py  app.py  food_allergies.db  food_allergy_shield.py  main_app.py
src/foodallergyshield.dist-info/: METADATA  top_level.txt
tools/: generate_placeholders.py
